[package]
name = "cvardump"
version = "0.1.0"
authors = ["Jener Rasmussen <jener@jener.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rcon = "0.4.0"
regex = "1.4.3"
csv = "1.1.5"
tokio = { version = "1.1.0", features = ["rt-multi-thread"] }